finished the healthy recipes of week section, spaced images accordingly and fixed some mest up spacing for the upper section, now am starting in the where to eat section

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 .everyday-categories-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     width : 100%;
     background-color: white;
 }
@@ -118,20 +118,49 @@ body {
 }
 
 /* EVERYDAY CATEGORIES ENDS */
-
+/* HEALTHY RECIPES OF THE WEEK */
 .healthy-recipes-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     background-color: rgb(171, 182, 192);
     width: 100%;
+    padding: 20px 0;
+    margin: 10px 0;
 }
 .healthy-recipes-container h2 {
-    margin: 0 80px 10px 80px;
+    margin: 0 90px;
     font-size: 30px;
 }
 
 .healthy-recipes-container p {
-    margin: 0 80px;
+    margin: 0 90px;
     font-size: 18px;
 }
+
+.healthy-recipes-images{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+    margin: 10px 0;
+}
+
+.healthy-recipes-images img {
+    display: flex;
+    width: 300px;
+    object-fit: cover;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+.healthy-recipes-images span {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+    background-color: white;
+    padding: 10px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+/* HEALTHY RECIPES OF THE WEEK ENDS */
